--- a/app/frontend/styles/_flex-grid.scss
+++ b/app/frontend/styles/_flex-grid.scss
@@ -1,6 +1,13 @@
+@include govuk-media-query($until: tablet) {
+  .app-grid-row--flex > * {
+    margin-top: govuk-spacing(4);
+  }
+}
+
 @include govuk-media-query($from: tablet) {
   .app-grid-row--flex {
     display: flex;
+    flex-wrap: wrap;
 
     @each $width in map-keys($govuk-grid-widths) {
       .govuk-grid-column-#{$width} {
